--- a/yabause/src/port/qt/CMakeLists.txt
+++ b/yabause/src/port/qt/CMakeLists.txt
@@ -3,14 +3,19 @@ project( kronos-qt )
 yab_port_start()
 
 option(YAB_USE_QT5 "Use Qt 5 if available." ON)
-
-option(YAB_USE_QT5_SPECIFIC "Use dedicated QT setup" OFF)
-
+option(YAB_USE_QT5_SPECIFIC "Use dedicated QT setup" ON)
+if(YAB_USE_QT5)
+	message("Hello")
+endif()
+if(YAB_USE_QT5_SPECIFIC)
+	message("Specific")
+endif()
 if(YAB_USE_QT5)
   SET(OLD_CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH})
   if(YAB_USE_QT5_SPECIFIC)
-    SET(CMAKE_PREFIX_PATH C:/Qt/Qt5.12.12/5.12.12/msvc2017_64/lib/cmake/Qt5)
+    SET(CMAKE_PREFIX_PATH "C:/Qt/5.15.2/msvc2019_64")
   endif()
+
   find_package(Qt5 COMPONENTS Widgets QUIET)
   find_package(Qt5 COMPONENTS Multimedia REQUIRED QUIET)
   find_package(Qt5 COMPONENTS OpenGL REQUIRED QUIET)
@@ -240,6 +245,7 @@ yab_port_success(kronos-qt)
 configure_file(kronos.desktop.in ${YAB_PORT_NAME}.desktop)
 
 if (WIN32)
+
 	install(TARGETS kronos-qt DESTINATION ".")
 	if (SDL_FOUND)
 		get_filename_component(SDL_BINARY_DIR ${SDL_LIBRARY} PATH)
@@ -257,7 +263,13 @@ if (WIN32)
 			install(FILES ${QT_BINARY_DIR}/SDL2.dll DESTINATION ".")
 		endif ()
 	endif ()
+	
 	if(Qt5_FOUND)
+	message("")
+	message("") 
+	message("Qt5_FOUND found ${CMAKE_INSTALL_COMPONENT} ")
+	message("")
+	message("")
 		install(FILES ${QT_BINARY_DIR}/Qt5Core.dll DESTINATION ".")
 		install(FILES ${QT_BINARY_DIR}/Qt5Gui.dll DESTINATION ".")
 		install(FILES ${QT_BINARY_DIR}/Qt5OpenGL.dll DESTINATION ".")
@@ -291,7 +303,11 @@ if (WIN32)
 			install(DIRECTORY ${QT_BINARY_DIR}/ DESTINATION "." FILES_MATCHING PATTERN "libintl*.dll")
 			install(DIRECTORY ${QT_BINARY_DIR}/ DESTINATION "." FILES_MATCHING PATTERN "libpng*.dll")
 		endif()
+		if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
+		install(FILES ${QT_PLUGINS_DIR}/platforms/qwindowsd.dll DESTINATION "platforms")
+		else()
 		install(FILES ${QT_PLUGINS_DIR}/platforms/qwindows.dll DESTINATION "platforms")
+		endif()
 	endif()
 
 #	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../../AUTHORS    DESTINATION "." RENAME AUTHORS.txt)
