--- a/yabause/src/CMakeLists.txt
+++ b/yabause/src/CMakeLists.txt
@@ -437,13 +437,14 @@ endif ()
 # SDL
 option(YAB_WANT_SDL "use SDL cores if available" ON)
 if (YAB_WANT_SDL)
-	include(FindSDL2 OPTIONAL)
+  find_package(SDL2Kronos REQUIRED)
 
 	if (SDL2_FOUND)
 		add_definitions(-DHAVE_LIBSDL2=1)
 		include_directories(${SDL2_INCLUDE_DIR})
 		set(KRONOS_LIBRARIES ${KRONOS_LIBRARIES} ${SDL2_LIBRARY})
 	else()
+                Message("SDL2 is not found. You can set enviroonment variable sdl2lib_DIR to the location of SDL2 sources")
 		include(FindSDL)
 		if (SDL_FOUND)
 			message (WARNING "Deprecated version of SDL found. Support will be removed in the future. ")
