--- a/.github/workflows/cmake.windows.yml
+++ b/.github/workflows/cmake.windows.yml
@@ -1,4 +1,4 @@
-name: CMake Windows
+name: Generate Windows Installer
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -57,7 +57,7 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       #run: ctest -C ${{env.BUILD_TYPE}}
-    - name: Rename kronos package
+    - name: Prepare package
       id: rename
       shell: bash
       run: |
@@ -65,11 +65,10 @@ jobs:
         NAME=$(find build/ -maxdepth 1 -iname "kronos-*.exe")
         mv $NAME kronos-win64-$SHORT_SHA.exe
         echo "ReleaseFile=kronos-win64-$SHORT_SHA.exe" >> "$GITHUB_ENV"
-      env:
-        ReleaseFile: kronos-win64-$SHORT_SHA.exe
+        echo "ArtifactName=kronos-win64-$SHORT_SHA" >> "$GITHUB_ENV"
     - name: Binary upload
       uses: actions/upload-artifact@v4
       with:
-        name: kronos binaries
+        name: ${{env.ArtifactName}}
         path: ${{env.ReleaseFile}}
       
