--- a/.github/workflows/cmake.linux.ubuntu.yml
+++ b/.github/workflows/cmake.linux.ubuntu.yml
@@ -5,13 +5,15 @@ on:
     branches: [ kronos-cmake_ci ]
   pull_request:
     branches: [ kronos-cmake_ci ]
+  workflow_dispatch:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
-  build:
+   ubuntu_release_job:
+     name: Releasing for Ubuntu
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
@@ -19,27 +21,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Install prerequisite packages
+      - name: Preparing environment
       run: |
-        sudo apt-get update -y
-        sudo apt-get install -y libxrandr-dev
-        sudo apt-get install -y libxinerama-dev
-        sudo apt-get install -y libxcursor-dev
-        sudo apt-get install -y libx11-dev
-        sudo apt-get install -y libxi-dev
-        sudo apt-get install -y build-essential libgl1-mesa-dev libglew-dev mesa-utils mesa-common-dev
+          echo "Installing required packages."
+          sudo apt-get update
+          sudo apt-get install -y cmake qt5-default qtmultimedia5-dev libqt5opengl5-dev libsdl2-dev
+          echo "Cloning sources"
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -S ${{github.workspace}}/yabause -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: |
+          cmake -S ${{github.workspace}}/yabause -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
+        shell: bash
+        run: |
+          echo "Compiling"
+          cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+          cpack -G DEB
+          NAME=$(find build/ -maxdepth 1 -iname "kronos-*.deb")
+          echo "ReleaseFile=$NAME" >> "$GITHUB_ENV"
+          echo "ArtifactName=$NAME" >> "$GITHUB_ENV"
+      - name: Binary upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{env.ArtifactName}}
+          path: ${{env.ReleaseFile}}
     #- name: Test
       #working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
