--- a/yabause/CMakeLists.txt
+++ b/yabause/CMakeLists.txt
@@ -24,6 +24,11 @@ set(CPACK_PACKAGE_VENDOR "Francois CARON")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "kronos-${YAB_VERSION}")
 
+set(CPACK_STRIP_FILES YES)
+set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+set(CPACK_PACKAGE_CONTACT "francois.caron.perso@gmail.com")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Francois CARON")
 if (WIN32)
 	SET(CPACK_NSIS_INSTALLED_ICON_NAME kronos.exe)
 	set(CPACK_NSIS_MENU_LINKS kronos.exe;Kronos)
