--- a/yabause/CMakeLists.txt
+++ b/yabause/CMakeLists.txt
@@ -14,7 +14,17 @@ set(YAB_PACKAGE kronos)
 set(YAB_VERSION_MAJOR 2)
 set(YAB_VERSION_MINOR 6)
 set(YAB_VERSION_PATCH 2)
-set(YAB_VERSION "${YAB_VERSION_MAJOR}.${YAB_VERSION_MINOR}.${YAB_VERSION_PATCH}")
+
+option(YAB_IS_WIP "Is a working package" OFF)
+if(YAB_IS_WIP)
+  Message(STATUS "Build is a WIP")
+  find_package(Git REQUIRED)
+  execute_process(COMMAND "${GIT_EXECUTABLE}" rev-parse HEAD OUTPUT_VARIABLE COMMIT_ID OUTPUT_STRIP_TRAILING_WHITESPACE)
+  string(SUBSTRING ${COMMIT_ID} 0 9 COMMIT_ID_SHORT)
+  set(YAB_VERSION "${YAB_VERSION_MAJOR}.${YAB_VERSION_MINOR}.${YAB_VERSION_PATCH} ${COMMIT_ID_SHORT}")
+else()
+  set(YAB_VERSION "${YAB_VERSION_MAJOR}.${YAB_VERSION_MINOR}.${YAB_VERSION_PATCH}")
+endif()
 
 set(CPACK_SOURCE_GENERATOR TGZ)
 set(CPACK_PACKAGE_VERSION_MAJOR ${YAB_VERSION_MAJOR})
